# Wombat

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: openings.txt  wdl_urls.txt
src/: EndgameDB.cpp  EndgameDB.h  OpeningDB.cpp  OpeningDB.h  SearchThreadpool.cpp  SearchThreadpool.h  TranspositionTable.cpp  TranspositionTable.h  board.h  constants.h  eval.cpp  eval.h  move.cpp  move.h  movegen.cpp  movegen.h  openingdb.cpp  openingdb.h  search.cpp  search.h  transposition.cpp  transposition.h  ui.cpp  ui.h
util/: combined_headers.txt  create_context.py  create_openings.cpp
